# CompileMaster

./: LICENSE  README.md  pyproject.toml  setup.py
compilemaster/: cli.py  index.py
test/: .toml
test/compl_dist/: secret.key  test.compl
